fix sticky-top de navbar, el overflow hidden lo rompia, correccion de margenes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,10 @@
   padding: 0;
   box-sizing: border-box; }
 
-html, body {
-  overflow-x: hidden; }
-
+/*
+html , body{
+    overflow-x: hidden;
+}*/
 @font-face {
   font-family: Museo;
   src: url(../fonts/MuseoModerno/static/MuseoModerno-Regular.ttf); }
@@ -277,8 +278,6 @@ nav {
 /*fin animacion boton*/
 .trabajoVideo {
   display: flex;
-  margin: 10px;
-  padding: 10px;
   width: 100%;
   height: 469px;
   justify-content: center; }
@@ -629,7 +628,9 @@ nav {
   place-items: center;
   width: 100%;
   height: 100%;
-  background: #1a1a1ae8; }
+  background: #1a1a1ae8;
+  z-index: 1021;
+  /*evito que se superponga con el navar de bootstrap que tiene 1020 por defecto*/ }
 
 @keyframes pantallaGris {
   100% {
@@ -689,8 +690,3 @@ nav {
     transform: rotate(-360deg); } }
 
 /*----------------Fin Configuracion del Loading----------------*/
-.sticky-top {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 1020; }
