--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,4 +23,3 @@
 @import 'layout/mediaQueries';
 @import 'utilities/loading';
 
-.sticky-top{position:-webkit-sticky;position:sticky;top:0;z-index:1020}
