--- a/src/scss/views/_products.scss
+++ b/src/scss/views/_products.scss
@@ -70,8 +70,6 @@
 /*fin animacion boton*/
 .trabajoVideo{
     display: flex;
-    margin: 10px;
-    padding: 10px;
     width:100%;
     height: 469px;
     justify-content: center; 
